# sequential-importance-sampling

./: .gitignore  LICENSE  README.md  publish.sh  pyproject.toml
.claude/: settings.local.json
src/: sequential_importance_sampling.py
tests/: test_diaconis_gangolli.py  test_holmes_jones.py
